--- a/lib/assets/l10n/app_en.arb
+++ b/lib/assets/l10n/app_en.arb
@@ -1,11 +1,9 @@
 {
-
-
-    "login": "Login",
-    "register": "Register",
-    "email": "Email",
-    "userName": "user name",
-    "password": "password"
-
-
+  "login": "Login",
+  "register": "Regsiter",
+  "email": "Email",
+  "userName": "User name",
+  "password": "Password",
+  "googleSign": "Google Sign",
+  "chats": "Chats"
 }
