--- a/lib/assets/l10n/app_en.arb
+++ b/lib/assets/l10n/app_en.arb
@@ -5,5 +5,9 @@
   "userName": "User name",
   "password": "Password",
   "googleSign": "Google Sign",
-  "chats": "Chats"
+  "chats": "Chats",
+  "profile": "Profile",
+  "photoGallery": "Photo Gallery",
+  "cameraImage": "Camera Image",
+  "cancel": "Cancel"
 }
