--- a/lib/assets/l10n/app_ar.arb
+++ b/lib/assets/l10n/app_ar.arb
@@ -1,9 +1,12 @@
 {
-  "login": "Login",
-  "register": "Regsiter",
-  "email": "Email",
-  "userName": "User name",
-  "password": "Password",
-  "googleSign": "Google Sign",
-  "chats": "Chats"
+  "login": "",
+  "register": "",
+  "email": "",
+  "userName": "",
+  "googleSign": "",
+  "chats": "",
+  "profile": "",
+  "photoGallery": "",
+  "cameraImage": "",
+  "cancel": ""
 }
